[tool.poetry]
name = "plantapop"
version = "0.1.0"
description = "El núcleo de Plantacity, una aplicación para la venta e intercambio de esquejes de plantas."
authors = ["pablo-snz <pablo.snz.brm@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
SQLAlchemy = "^2.0.18"
alembic = "^1.11.1"
pydantic = "^2.0.2"
PyYAML = "^6.0"
pydantic-settings = "^2.0.2"
sqlalchemy-utils = "^0.41.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
pylint = "^2.17.4"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
start = "plantapop.__main__:main"
test = "ci:run_pytest"
format = "ci:run_black"
lint = "ci:run_pylint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
